# remote_file_sync

./: CMakeLists.txt  README.md
client/: file_watcher  file_watcher.c  rfs_file.c  socket_client.c
include/: file_watcher.h  rfs_file.h  socket_client.h
misc/: test_socket.py
server/: server  server.c
src/: CMakeLists.txt
src/client/: file_watcher.c  rfs_file.c  socket_client.c
src/include/: comm.h
src/include/args/: args.h
src/server/: comm.c  server.c
